# SupplierServer

./: .gitignore  pyproject.toml  requirements.txt  run.sh
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_order_options_order_quantity_alter_order_table.py
config/: settings.py  urls.py
web/: package-lock.json  package.json
web/src/: App.js  api.js
web/src/components/: Login.js  Order.js  SignUp.js
